tests/type-check/bad/newtype.arr

newtype Foo as FooT

a = 5
b :: Number = FooT.brand(a)
